adjust install script: install in user home directory

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -1,5 +1,11 @@
 # Path to your oh-my-zsh installation.
 export ZSH=$HOME/.oh-my-zsh
+export DOTDIR=$HOME/Development/scripts/shell/dotfiles
+
+# update PATH variable
+while read p; do
+    export PATH=${p}:$PATH
+done < $DOTDIR/conf/shell/paths.conf
 
 # Set name of the theme to load. Optionally, if you set this to "random"
 # it'll load a random theme each time that oh-my-zsh is loaded.
