resolve path error symlinks

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -4,7 +4,7 @@ export ZSH=$HOME/.oh-my-zsh
 # update PATH variable
 while read p; do
     export PATH=${p}:$PATH
-done < $HOME/dotfiles/conf/shell/paths.conf
+done < $HOME/.dotfiles/conf/shell/paths.conf
 
 # Set name of the theme to load. Optionally, if you set this to "random"
 # it'll load a random theme each time that oh-my-zsh is loaded.
