--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -1,14 +1,20 @@
 # Path to your oh-my-zsh installation.
 export ZSH=$HOME/.oh-my-zsh
 
-# update PATH variable
+# Update PATH variable
 while read p; do
     export PATH=${p}:$PATH
 done < $HOME/.dotfiles/conf/shell/paths.conf
 
-# Set name of the theme to load. Optionally, if you set this to "random"
-# it'll load a random theme each time that oh-my-zsh is loaded.
-# See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
+# Export variables
+while read p; do
+    export ${p}
+done < $HOME/.dotfiles/conf/shell/variables.conf
+
+# Source aliases
+source $HOME/.dotfiles/conf/shell/variables.conf
+
+# theme
 ZSH_THEME="robbyrussell"
 
 # Would you like to use another custom folder than $ZSH/custom?
