update conf files

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -1,12 +1,9 @@
-# Path to your oh-my-zsh installation.
-export ZSH=$HOME/.oh-my-zsh
-
-# Update PATH variable
+# Export PATH
 while read p; do
     export PATH=${p}:$PATH
 done < $HOME/.dotfiles/conf/shell/paths.conf
 
-# Export variables
+# Export various variables
 while read p; do
     export ${p}
 done < $HOME/.dotfiles/conf/shell/variables.conf
@@ -14,21 +11,11 @@ done < $HOME/.dotfiles/conf/shell/variables.conf
 # Source aliases
 source $HOME/.dotfiles/conf/shell/variables.conf
 
-# theme
-ZSH_THEME="robbyrussell"
-
-# Would you like to use another custom folder than $ZSH/custom?
-# ZSH_CUSTOM=/path/to/new-custom-folder
-
-# Which plugins would you like to load? (plugins can be found in ~/.oh-my-zsh/plugins/*)
-# Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
-# Example format: plugins=(rails git textmate ruby lighthouse)
-# Add wisely, as too many plugins slow down shell startup.
-plugins=(
-  git
-)
-
+# Source zsh
 source $ZSH/oh-my-zsh.sh
+
+# Select theme
+ZSH_THEME="robbyrussell"
 
 # Use vim as the editor
 export EDITOR=vim
