resolve zshrc error

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -3,6 +3,9 @@ while read p; do
     export PATH=${p}:$PATH
 done < $HOME/.dotfiles/conf/shell/paths.conf
 
+# Path to your oh-my-zsh installation.
+export ZSH=$HOME/.oh-my-zsh
+
 # Export various variables
 while read p; do
     export ${p}
