--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -8,6 +8,10 @@ while read p; do
     export ${p}
 done < $HOME/.dotfiles/conf/shell/variables.conf
 
+# Source aliases
+source $HOME/.dotfiles/conf/shell/variables.conf
+
+
 # Select theme
 ZSH_THEME="robbyrussell"
 
@@ -16,6 +20,3 @@ source $ZSH/oh-my-zsh.sh
 
 # Use vim as the editor
 export EDITOR=vim
-
-# Source aliases
-$HOME/.aliases
