--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -1,3 +1,7 @@
+#-------------------------------
+#           GENERAL
+#-------------------------------
+
 # Export PATH
 while read p; do
     export PATH=${p}:$PATH
@@ -20,3 +24,35 @@ source $ZSH/oh-my-zsh.sh
 
 # Use vim as the editor
 export EDITOR=vim
+
+#-------------------------------
+#           ALIASES
+#-------------------------------
+
+# MOBILITY
+alias cdscr='cd $SCRIPTDIR'
+alias cdvgr='cd $HOME/das-machine'
+alias cddev='cd $HOME/Development'
+alias cdweb='cd /$HOME/Development/web'
+
+# GIT
+alias gps='git push'
+alias ga='git add'
+alias gcm='git commit -m'
+alias gs='git status'
+alias gp='git pull'
+alias gpo='git pull origin'
+alias gd='git diff'
+alias gpsom='git push origin master'
+alias gconfdas='git config user.email "dries@dasmedia.be" && git config user.name "Dries Hooghe"'
+alias gconfdries='git config user.email "dries.hooghe@gmail.com" && git config user.name "Dries Hooghe"'
+
+# VAGRANT
+alias vgrup='vagrant up'
+alias vgrdown='vagrant halt'
+
+# SHELL
+alias zshconf='vim ~/.zshrc'
+alias zshreload='. ~/.zshrc'
+alias aliases='cat $HOME/conf/shell/aliases'
+
