make literal path string dynamic

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -4,7 +4,11 @@
 
 # Export PATH
 while read p; do
-    export PATH=${p}:$PATH
+    if [[ ${p:0:5} == '$HOME' ]]; then
+        export PATH=${HOME}${p:5}:$PATH
+    else
+        export PATH=${p}:$PATH
+    fi
 done < $HOME/.dotfiles/conf/shell/paths.conf
 
 # Export various variables
