--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -9,15 +9,15 @@ while read p; do
     else
         export PATH=${p}:$PATH
     fi
-done < $HOME/.dotfiles/conf/shell/paths.conf
+done < $HOME/.tomes/conf/shell/paths.conf
 
 # Export various variables
 while read p; do
     export ${p}
-done < $HOME/.dotfiles/conf/shell/variables.conf
+done < $HOME/.tomes/conf/shell/variables.conf
 
 # Source aliases
-source $HOME/.dotfiles/conf/shell/variables.conf
+source $HOME/.tomes/conf/shell/variables.conf
 
 
 # Select theme
