--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -16,14 +16,11 @@ while read p; do
     export ${p}
 done < $HOME/.tomes/conf/shell/variables.conf
 
-# Source aliases
-source $HOME/.tomes/conf/shell/variables.conf
-
-
 # Select theme
 ZSH_THEME="robbyrussell"
 
 # Source zsh
+export ZSH=$HOME/.oh-my-zsh
 source $ZSH/oh-my-zsh.sh
 
 # Use vim as the editor
