add Go installation

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -26,6 +26,14 @@ source $ZSH/oh-my-zsh.sh
 # Use vim as the editor
 export EDITOR=vim
 
+# Golang
+if [ -d "$HOME/.go" ]; then
+    export GOROOT=$HOME/.go
+    export PATH=$PATH:$GOROOT/bin
+    export GOPATH=$HOME/go
+    export PATH=$PATH:$GOPATH/bin
+fi
+
 #-------------------------------
 #           ALIASES
 #-------------------------------
