--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -28,7 +28,7 @@ export EDITOR=vim
 
 # Golang
 if [ -d "$HOME/.go" ]; then
-    export GOROOT=$HOME/.go
+    export GOROOT=/usr/local/go
     export PATH=$PATH:$GOROOT/bin
     export GOPATH=$HOME/go
     export PATH=$PATH:$GOPATH/bin
