resolve gopath error

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -27,7 +27,7 @@ source $ZSH/oh-my-zsh.sh
 export EDITOR=vim
 
 # Golang
-if [ -d "$HOME/.go" ]; then
+if [ -d "/usr/local/go" ]; then
     export GOROOT=/usr/local/go
     export PATH=$PATH:$GOROOT/bin
     export GOPATH=$HOME/go
