--- a/conf/gitconfig.conf
+++ b/conf/gitconfig.conf
@@ -1,3 +1,9 @@
 [user]
 	name = Dries Hooghe
 	email = dries@dasmedia.be
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
