--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -42,7 +42,8 @@ fi
 alias cdscr='cd $SCRIPTDIR'
 alias cdvgr='cd $HOME/das-machine'
 alias cddev='cd $HOME/Development'
-alias cdweb='cd /$HOME/Development/web'
+alias cdweb='cd $HOME/Development/web'
+alias cdgo='cd $HOME/go'
 
 # GIT
 alias gps='git push'
