use emacs instead of vim

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -23,8 +23,8 @@ ZSH_THEME="robbyrussell"
 export ZSH=$HOME/.oh-my-zsh
 source $ZSH/oh-my-zsh.sh
 
-# Use vim as the editor
-export EDITOR=vim
+# Use emacs as the editor
+export EDITOR=emacs
 
 # Golang
 if [ -d "/usr/local/go" ]; then
@@ -62,7 +62,7 @@ alias vgrup='vagrant up'
 alias vgrdown='vagrant halt'
 
 # SHELL
-alias zshconf='vim ~/.zshrc'
+alias zshconf='emacs ~/.zshrc'
 alias zshreload='. ~/.zshrc'
 alias aliases='cat $HOME/conf/shell/aliases'
 
