enable evil mode in emacs + set emacs alias

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -66,3 +66,5 @@ alias zshconf='emacs ~/.zshrc'
 alias zshreload='. ~/.zshrc'
 alias aliases='cat $HOME/conf/shell/aliases'
 
+# EMACS
+alias ema='emacs'
