--- a/conf/gitconfig.conf
+++ b/conf/gitconfig.conf
@@ -8,4 +8,4 @@
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [core]
-	excludesfile = /Users/Dries/.gitignore_global
+	excludesfile = $HOME/.gitignore_global
