--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -44,6 +44,8 @@ alias cdvgr='cd $HOME/das-machine'
 alias cddev='cd $HOME/Development'
 alias cdweb='cd $HOME/Development/web'
 alias cdgo='cd $HOME/go'
+alias cdgodh='cd $HOME/go/src/github.com/drieshooghe'
+alias cdtom='cd $HOME/.tomes'
 
 # GIT
 alias gps='git push'
@@ -63,9 +65,10 @@ alias vgrup='vagrant up'
 alias vgrdown='vagrant halt'
 
 # SHELL
-alias zshconf='emacs ~/.zshrc'
-alias zshreload='. ~/.zshrc'
+alias zshconf='emacs -nw $HOME/.zshrc'
+alias zshreload='. $HOME/.zshrc'
 alias aliases='cat $HOME/conf/shell/aliases'
+alias emaconf='emacs -nw $HOME/.emacs.d/init.el'
 
 # EMACS
 alias ema='emacs -nw'
