replace emacs with vim

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -65,10 +65,7 @@ alias vgrup='vagrant up'
 alias vgrdown='vagrant halt'
 
 # SHELL
-alias zshconf='emacs -nw $HOME/.zshrc'
+alias zshconf='vim $HOME/.zshrc'
 alias zshreload='. $HOME/.zshrc'
 alias aliases='cat $HOME/conf/shell/aliases'
-alias emaconf='emacs -nw $HOME/.emacs.d/init.el'
-
-# EMACS
-alias ema='emacs -nw'
+alias vimconf='vim $HOME/.vimrc'
