--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -2,7 +2,7 @@
 #           GENERAL
 #-------------------------------
 
-# Export PATH
+# Export PATH variables
 while read p; do
     if [[ ${p:0:5} == '$HOME' ]]; then
         export PATH=${HOME}${p:5}:$PATH
@@ -11,22 +11,14 @@ while read p; do
     fi
 done < $HOME/.tomes/conf/shell/paths.conf
 
-# Export various variables
+# Export other variables
 while read p; do
-    export ${p}
+    if [[ ${p:0:1} != '#' ]]; then
+	export ${p}
+    fi
 done < $HOME/.tomes/conf/shell/variables.conf
 
-# Select theme
-ZSH_THEME="robbyrussell"
-
-# Source zsh
-export ZSH=$HOME/.oh-my-zsh
-source $ZSH/oh-my-zsh.sh
-
-# Use emacs as the editor
-export EDITOR=emacs
-
-# Golang
+# Export Golang variables if Go is installed
 if [ -d "/usr/local/go" ]; then
     export GOROOT=/usr/local/go
     export PATH=$PATH:$GOROOT/bin
@@ -35,37 +27,35 @@ if [ -d "/usr/local/go" ]; then
 fi
 
 #-------------------------------
-#           ALIASES
+#           ZSH
 #-------------------------------
 
-# MOBILITY
-alias cdscr='cd $SCRIPTDIR'
-alias cdvgr='cd $HOME/das-machine'
-alias cddev='cd $HOME/Development'
-alias cdweb='cd $HOME/Development/web'
-alias cdgo='cd $HOME/go'
-alias cdgodh='cd $HOME/go/src/github.com/drieshooghe'
-alias cdtom='cd $HOME/.tomes'
+# Select theme
+ZSH_THEME="robbyrussell"
 
-# GIT
-alias gps='git push'
-alias ga='git add'
-alias gcm='git commit -m'
-alias gs='git status'
-alias gp='git pull'
-alias gpo='git pull origin'
-alias gd='git diff'
-alias gpsom='git push origin master'
-alias gconfdas='git config user.email "dries@dasmedia.be" && git config user.name "Dries Hooghe"'
-alias gconfdries='git config user.email "dries.hooghe@gmail.com" && git config user.name "Dries Hooghe"'
-alias gusnm="git rm -r --cached node_modules"
+# Source zsh and personal configuration
+export ZSH=$HOME/.oh-my-zsh
+source $ZSH/oh-my-zsh.sh
+source $HOME/.tomes/conf/zsh/checks.zsh
+source $HOME/.tomes/conf/zsh/colors.zsh
+source $HOME/.tomes/conf/zsh/setopts.zsh
+source $HOME/.tomes/conf/zsh/aliases.zsh
+source $HOME/.tomes/conf/zsh/functions.zsh
+source $HOME/.tomes/conf/zsh/history.zsh
+source $HOME/.tomes/conf/zsh/z.sh
 
-# VAGRANT
-alias vgrup='vagrant up'
-alias vgrdown='vagrant halt'
 
-# SHELL
-alias zshconf='vim $HOME/.zshrc'
-alias zshreload='. $HOME/.zshrc'
-alias aliases='cat $HOME/conf/shell/aliases'
-alias vimconf='vim $HOME/.vimrc'
+#-------------------------------
+#           VIM
+#-------------------------------
+
+
+
+
+#-------------------------------
+#           TMUX
+#-------------------------------
+
+
+
+
