replace  string with path in variables.conf

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -14,7 +14,7 @@ done < $HOME/.tomes/conf/shell/paths.conf
 # Export other variables
 while read p; do
     if [[ ${p:0:1} != '#' ]]; then
-	export ${p}
+	export ${p/'$HOME'/$HOME}	
     fi
 done < $HOME/.tomes/conf/shell/variables.conf
 
@@ -44,7 +44,6 @@ source $HOME/.tomes/conf/zsh/functions.zsh
 source $HOME/.tomes/conf/zsh/history.zsh
 source $HOME/.tomes/conf/zsh/z.sh
 
-
 #-------------------------------
 #           VIM
 #-------------------------------
@@ -56,6 +55,10 @@ source $HOME/.tomes/conf/zsh/z.sh
 #           TMUX
 #-------------------------------
 
-
+# TMUX Variables
+ZSH_TMUX_AUTOSTART=true
+ZSH_TMUX_AUTOSTART_ONCE=true
+ZSH_TMUX_FIXTERM=true
+ZSH_TMUX_AUTOQUIT=false
 
 
