source oh-my-zsh last

--- a/conf/zshrc.conf
+++ b/conf/zshrc.conf
@@ -27,24 +27,6 @@ if [ -d "/usr/local/go" ]; then
 fi
 
 #-------------------------------
-#           ZSH
-#-------------------------------
-
-# Select theme
-ZSH_THEME="robbyrussell"
-
-# Source zsh and personal configuration
-export ZSH=$HOME/.oh-my-zsh
-source $ZSH/oh-my-zsh.sh
-source $HOME/.tomes/conf/zsh/checks.zsh
-source $HOME/.tomes/conf/zsh/colors.zsh
-source $HOME/.tomes/conf/zsh/setopts.zsh
-source $HOME/.tomes/conf/zsh/aliases.zsh
-source $HOME/.tomes/conf/zsh/functions.zsh
-source $HOME/.tomes/conf/zsh/history.zsh
-source $HOME/.tomes/conf/zsh/z.sh
-
-#-------------------------------
 #           VIM
 #-------------------------------
 
@@ -61,4 +43,25 @@ ZSH_TMUX_AUTOSTART_ONCE=true
 ZSH_TMUX_FIXTERM=true
 ZSH_TMUX_AUTOQUIT=false
 
+#-------------------------------
+#           ZSH
+#-------------------------------
+
+# Select theme
+ZSH_THEME="robbyrussell"
+
+# Enable plugins
+
+plugins=(z tmux)
+
+# Source zsh and personal configuration
+export ZSH=$HOME/.oh-my-zsh
+source $HOME/.tomes/conf/zsh/checks.zsh
+source $HOME/.tomes/conf/zsh/colors.zsh
+source $HOME/.tomes/conf/zsh/setopts.zsh
+source $HOME/.tomes/conf/zsh/aliases.zsh
+source $HOME/.tomes/conf/zsh/functions.zsh
+source $HOME/.tomes/conf/zsh/history.zsh
+source $HOME/.tomes/conf/zsh/z.sh
+source $ZSH/oh-my-zsh.sh
 
