update vim config

--- a/conf/vimrc.conf
+++ b/conf/vimrc.conf
@@ -1,6 +1,17 @@
-" Syntax highlighting setup
+" Syntax setup
 filetype on
 syntax enable
 colorscheme molokai
+set nowrap
+set expandtab
+set smartindent
+set autoindent
+set showmatch "show matching parenthesis
+
+" Window settings
+set number
+
+" Set history length
+set history=100
 
 
