add vim-plug manager + configure netrw file explorer

--- a/conf/zsh/zshrc.conf
+++ b/conf/zsh/zshrc.conf
@@ -65,3 +65,5 @@ source $HOME/.tomes/conf/zsh/history.zsh
 source $HOME/.tomes/conf/zsh/z.sh
 source $ZSH/oh-my-zsh.sh
 
+
+[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
