remove some vim packages

--- a/conf/vimrc.conf
+++ b/conf/vimrc.conf
@@ -1,5 +1,6 @@
 " AUTHOR NOTE: 
 " Set caps lock as escape key in OS keyboard settings
+" Speed up the key repeat to fastest and the delay to second shortest in Mac OSX
 
 " Syntax setup
 filetype on
@@ -17,24 +18,19 @@ set number
 " Set history length
 set history=100
 
-" No need for NerdTree, tweak netrw a bit
-let g:netrw_liststyle=3
-let g:netrw_banner=0        
-let g:netrw_winsize = 20
-
 " Remap certain keys
         
         " Navigate panes by holding Control and a directory
-        nmap <silent> <c-k> :wincmd k<CR>
-        nmap <silent> <c-j> :wincmd j<CR>
-        nmap <silent> <c-h> :wincmd h<CR>
-        nmap <silent> <c-l> :wincmd l<CR>
-
+        "nmap <silent> <c-k> :wincmd k<CR>
+        "nmap <silent> <c-j> :wincmd j<CR>
+        "nmap <silent> <c-h> :wincmd h<CR>
+        "nmap <silent> <c-l> :wincmd l<CR>
+                
 " Specify plugin directory
 call plug#begin($HOME.'/.vim/bundle')
 
-        Plug 'tpope/vim-commentary' "Comment stuff out
         Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' } "Install as a command line utility
+        Plug 'christoomey/vim-tmux-navigator'
 
 call plug#end()
 
