--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -1,9 +1,14 @@
-TERM=screen-256color
+# Set terminal screen colors
+set-option -g default-terminal screen-256color
 
 # Set prefix
 set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
+set -g base-index 1
+
+# Enable Vi mode
+setw -g mode-keys vi
 
 # Set keys to move around
 
@@ -22,4 +27,5 @@ bind-key C-a send-prefix
         bind-key -T copy-mode-vi C-l select-pane -R
         bind-key -T copy-mode-vi C-\ select-pane -l
 
-
+# Set bindings for layouts
+bind F source-file $HOME/.tomes/conf/tmux/layouts/fdev
