add vim-vinegar as vim file explorer

--- a/conf/vimrc.conf
+++ b/conf/vimrc.conf
@@ -18,19 +18,12 @@ set number
 " Set history length
 set history=100
 
-" Remap certain keys
-        
-        " Navigate panes by holding Control and a directory
-        "nmap <silent> <c-k> :wincmd k<CR>
-        "nmap <silent> <c-j> :wincmd j<CR>
-        "nmap <silent> <c-h> :wincmd h<CR>
-        "nmap <silent> <c-l> :wincmd l<CR>
-                
 " Specify plugin directory
 call plug#begin($HOME.'/.vim/bundle')
 
         Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' } "Install as a command line utility
         Plug 'christoomey/vim-tmux-navigator'
+        Plug 'tpope/vim-vinegar' "File explorer
 
 call plug#end()
 
