--- a/conf/vimrc.conf
+++ b/conf/vimrc.conf
@@ -1,29 +1,63 @@
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+"
+" Maintainer:
+"
+"       Dries Hooghe <dries.hooghe@gmail.com>
+"
+" Version:
+"
+"       1.0 [10/02/2017]
+"
+" Sections:
+"
+"       1. Settings
+"               1.1 General
+"               1.2 User interface
+"               1.3 Colors
+"               1.4 Files and backups
+"               1.5 Vimrc specific settings
+"               1.X Misc
+"       2. Mappings
+"       3. Plugins
+"
 " AUTHOR NOTE: 
 " Set caps lock as escape key in OS keyboard settings
 " Speed up the key repeat to fastest and the delay to second shortest in Mac OSX
+"
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
-" Syntax setup
-filetype on
-syntax enable
-colorscheme molokai
-set nowrap
-set expandtab
-set smartindent
-set autoindent
-set showmatch "show matching parenthesis
+" 1. Settings
+        
+        " 1.1 General Settings
+                filetype on
+                syntax enable
 
-" Window settings
-set number
+        " 1.2 User interface
+                set nowrap
+                set expandtab
+                set smartindent
+                set showmatch
+                set number
 
-" Set history length
-set history=100
+        " 1.3 Colors
+                colorscheme molokai
 
-" Specify plugin directory
-call plug#begin($HOME.'/.vim/bundle')
+        " 1.4 Files and backups
+                set undofile
+                set undodir=$HOME/.vimundo
+                set history=250
 
-        Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' } "Install as a command line utility
-        Plug 'christoomey/vim-tmux-navigator'
-        Plug 'tpope/vim-vinegar' "File explorer
+        " 1.5 Vimrc specific settings
+                
 
-call plug#end()
 
+
+" 3. Plugins
+        
+        call plug#begin($HOME.'/.vim/bundle')
+                
+                Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' } "Install as a command line utility
+                Plug 'christoomey/vim-tmux-navigator'
+                Plug 'tpope/vim-vinegar' "File explorer
+        
+        call plug#end()
