--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -10,7 +10,7 @@ set -g base-index 1
 # Enable Vi mode
 setw -g mode-keys vi
 
-# Set keys to move around
+# Key remappings
 
         # Smart pane switching with awareness of Vim splits.
         # See: https://github.com/christoomey/vim-tmux-navigator
@@ -29,3 +29,4 @@ setw -g mode-keys vi
 
 # Set bindings for layouts
 bind F source-file $HOME/.tomes/conf/tmux/layouts/fdev
+
