add zsh function to contact remote server

--- a/conf/zsh/zshrc.conf
+++ b/conf/zsh/zshrc.conf
@@ -18,8 +18,17 @@ while read p; do
     fi
 done < $HOME/.tomes/conf/shell/variables.conf
 
+# Export hidden variables
+if [[ -f $HOME/.tomes/conf/.env ]]; then
+        while read p; do
+                if [[ ${p:0:1} != '#' ]]; then
+                        export ${p/'$HOME'/$HOME}
+                fi
+        done < $HOME/.tomes/conf/.env
+fi
+
 # Export Golang variables if Go is installed
-if [ -d "/usr/local/go" ]; then
+if [[ -d "/usr/local/go" ]]; then
     export GOROOT=/usr/local/go
     export PATH=$PATH:$GOROOT/bin
     export GOPATH=$HOME/go
