update node path

--- a/conf/shell/paths.conf
+++ b/conf/shell/paths.conf
@@ -1,4 +1,4 @@
-/usr/local/Cellar/node/8.7.0/bin/
+/usr/local/Cellar/node/9.5.0/bin
 $HOME/Development/scripts
 $HOME/.tomes/src/constants
 $HOME/.tomes/src/functions
