--- a/conf/vimrc.conf
+++ b/conf/vimrc.conf
@@ -10,15 +10,15 @@
 "
 " Sections:
 "
-"       1. Settings
-"               1.1 General
-"               1.2 User interface
-"               1.3 Colors
-"               1.4 Files and backups
-"               1.5 Vimrc specific settings
-"               1.X Misc
-"       2. Mappings
-"       3. Plugins
+"       1. Plugins
+"       2. Settings
+"               2.1 General
+"               2.2 User interface
+"               2.3 Colors
+"               2.4 Files and backups
+"               2.5 Vimrc specific settings
+"               2.X Misc
+"       3. Mappings
 "
 " AUTHOR NOTE: 
 " Set caps lock as escape key in OS keyboard settings
@@ -26,38 +26,45 @@
 "
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
-" 1. Settings
-        
-        " 1.1 General Settings
-                filetype on
-                syntax enable
-
-        " 1.2 User interface
-                set nowrap
-                set expandtab
-                set smartindent
-                set showmatch
-                set number
-
-        " 1.3 Colors
-                colorscheme molokai
-
-        " 1.4 Files and backups
-                set undofile
-                set undodir=$HOME/.vimundo
-                set history=250
-
-        " 1.5 Vimrc specific settings
-                
-
-
-
-" 3. Plugins
+" 1. Plugins
         
         call plug#begin($HOME.'/.vim/bundle')
                 
                 Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' } "Install as a command line utility
                 Plug 'christoomey/vim-tmux-navigator'
                 Plug 'tpope/vim-vinegar' "File explorer
+                Plug 'itchyny/lightline.vim' "Status bar modification
+                Plug 'KeitaNakamura/neodark.vim' "Flat color theme
         
         call plug#end()
+
+" 2. Settings
+        
+        " 2.1 General Settings
+                filetype on
+                syntax enable
+
+        " 2.2 User interface
+                set nowrap
+                set expandtab
+                set smartindent
+                set showmatch
+                set number
+
+        " 2.3 Colors
+                set background=dark
+                set termguicolors
+                colorscheme neodark
+                let g:neodark#use_256color = 1
+                let g:lightline = {}
+                let g:lightline.colorscheme = 'neodark'
+                let g:neodark#background = '#202020'
+                let g:neodark#solid_vertsplit = 1
+                let g:neodark#use_custom_terminal_theme = 1 " default: 0
+
+        " 2.4 Files and backups
+                set undofile
+                set undodir=$HOME/.vimundo
+                set history=250
+
+        " 2.5 Vimrc specific settings
