init own zsh theme

--- a/conf/zsh/zshrc.conf
+++ b/conf/zsh/zshrc.conf
@@ -56,11 +56,11 @@ ZSH_TMUX_AUTOQUIT=false
 #           ZSH
 #-------------------------------
 
-# Select theme
-ZSH_THEME="robbyrussell"
+# Set theme
+ZSH_THEME=tomes
 
 # Enable plugins
-
+ZSH_THEME_GIT_PROMPT=false
 plugins=(z tmux)
 
 # Source zsh and personal configuration
