set tmux bar on bottom

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -37,7 +37,7 @@
                 # center window list
                 set -g status-justify centre
                 # position status bar on top
-                set-option -g status-position top
+                set-option -g status-position bottom
                 # show hostname on the left
                 set -g status-left-length 30
                 set -g status-left "#(echo $USER)@#h"
